# wiremock-tui

./: Cargo.toml
.github/workflows/: release.yml
src/: app.rs  application_model.rs  command_manager.rs  connection_edit_screen.rs  connection_screen.rs  connection_selection_screen.rs  contract.rs  event_manager.rs  main.rs  main_screen.rs  model.rs  stub_screen.rs  ui.rs  wire_mock_client.rs
src/configuration/: model.rs
src/server/: mod.rs  model.rs  server_edit_screen.rs  server_module.rs  server_selection_screen.rs
src/stub/: mod.rs  model.rs  stub_screen.rs
src/ui/: widgets.rs
