[package]
name = "wm-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
confy = "2.0.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
ureq = { version = "3.1.3", features = ["json"] }
